Fixed missing space between album admin menu items (thread ID 63987)

--- a/cpg1.5.x/css/coppermine.css
+++ b/cpg1.5.x/css/coppermine.css
@@ -175,3 +175,7 @@ div#film {
 	list-style: none;
 	float: left;
 }
+
+.buttonlist ul li a {
+	margin-right: 10px;
+}
